--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android:staging": "react-native run-android --mode=stagingdebug",
+    "android:staging-release": "react-native run-android --mode=stagingrelease",
+    "android:dev": "npx react-native run-android --mode=developmentdebug --appIdSuffix development",
+    "android:dev-release": "npx react-native run-android --mode=developmentrelease --appIdSuffix development",
+    "android:dev-release-aab": "cd android && ./gradlew bundleDevelopmentRelease",
+    "android:dev-release-apk": "cd android && ./gradlew assembleDevelopmentRelease",
+    "android:prod": "npx react-native run-android --mode=productiondebug",
+    "android:prod-release": "npx react-native run-android --mode=productionrelease",
+    "android:prod-release-aab": "cd android && ./gradlew bundleProductionRelease",
+    "android:prod-release-apk": "cd android && ./gradlew assembleProductionRelease",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
