--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.3.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-config": "^1.5.1"
