--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "android:dev-deploy": "yarn android:dev-release-apk && firebase appdistribution:distribute ./android/app/build/outputs/apk/development/release/app-development-release.apk --app 1:1040383152167:android:d3589ec4ed3082cabb7e02 --release-notes-file './release-note.txt' --groups 'Android'",
+    "ios:dev-deploy": "yarn ios:dev-release && firebase appdistribution:distribute ./ios_ipa_build/upowerDev.ipa --app 1:1040383152167:ios:990ad8559180accbbb7e02 --release-notes-file './release-note.txt' --groups 'IOS' && rm -rf ios_ipa_build/*"
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.3.2",
