--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@react-native-firebase/app": "^18.3.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-config": "^1.5.1"
+    "react-native-config": "^1.5.1",
+    "react-native-paper": "^5.10.6",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
