--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.3.2",
+    "axios": "^1.5.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-config": "^1.5.1",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "^4.7.2",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "ts-pattern": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@perf-profiler/e2e": "^0.10.7",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
