--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
 ENV=Production
 API_URL=https://api.production.com
+Access_Key='00okn-bbuCB_JxDBXefdekLxag5iTr6FlzLC5r_OB8Q'
+Secret_key='ihOYyeZE3I-q09y_c7ju6rLiXlqBA7PsyAaHmTG_kpw'
