--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "android:prod-release": "npx react-native run-android --mode=productionrelease",
     "android:prod-release-aab": "cd android && ./gradlew bundleProductionRelease",
     "android:prod-release-apk": "cd android && ./gradlew assembleProductionRelease",
+    "android:clean": "cd android && ./gradlew clean && cd ../",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -34,7 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/preset-env": "^7.22.20",
     "@babel/runtime": "^7.20.0",
     "@perf-profiler/e2e": "^0.10.7",
     "@react-native/eslint-config": "^0.72.2",
@@ -43,6 +44,7 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
