--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "android:dev-deploy": "yarn android:dev-release-apk && firebase appdistribution:distribute ./android/app/build/outputs/apk/development/release/app-development-release.apk --app 1:1040383152167:android:d3589ec4ed3082cabb7e02 --release-notes-file './release-note.txt' --groups 'Android'",
+    "android:dev-deploy": "yarn android:dev-release-apk && firebase appdistribution:distribute ./android/app/build/outputs/apk/development/release/app-development-release.apk --app 1:842709776740:android:ce78a5608556442cc52271 --release-notes-file './release-note.txt' --groups 'android-qa'",
     "ios:dev-deploy": "yarn ios:dev-release && firebase appdistribution:distribute ./ios_ipa_build/upowerDev.ipa --app 1:1040383152167:ios:990ad8559180accbbb7e02 --release-notes-file './release-note.txt' --groups 'IOS' && rm -rf ios_ipa_build/*"
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/crashlytics": "^18.5.0",
+    "@react-native-firebase/perf": "^18.5.0",
     "axios": "^1.5.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
