--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,7 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("com.google.firebase:firebase-crashlytics-gradle:2.9.9")
+        classpath 'com.google.firebase:perf-plugin:1.4.2'
         classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.google.firebase:firebase-appdistribution-gradle:4.0.0'
     }
